--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "immutable": "^4.0.0-rc.12",
     "koa": "^2.13.0",
     "koa-router": "^10.0.0",
