--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DOMAIN=localhost
 WEB_PORT=3000
 
 # POSTGRES DATA -> NEEDS TO CORRESPOND WITH VALUES IN docker-compose.yml
-PGHOST=postgres
+PGHOST=localhost
 PGUSER=sidekick_admin
 PGDATABASE=sidekick
 PGPASSWORD=psqlpw123
