--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sidekickjs",
   "version": "0.0.1",
   "description": "Modern opinionated web backend for rapid prototyping",
-  "main": "dist/index.js",
+  "main": "dist/src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "compile": "npx tsc",
