--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "koa": "^2.13.0",
     "koa-router": "^10.0.0",
     "pg": "^8.5.1",
+    "postgraphile": "^4.10.0",
     "yaml": "^2.0.0-1"
   }
 }
