--- a/src/database/tables/users_password/db.yaml
+++ b/src/database/tables/users_password/db.yaml
@@ -7,8 +7,8 @@ depends_on:
 create_stmt: >
   CREATE TABLE IF NOT EXISTS users_password (
     id Integer PRIMARY KEY REFERENCES users(id) ON DELETE CASCADE,
-    created_at TIMESTAMPZ NOT NULL DEFAULT NOW(),
-    updated_at TIMESTAMPZ NOT NULL DEFAULT NOW(),
+    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
+    updated_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
     password_hash CHAR(60),
     password_recovery_code UUID,
     password_recovery_code_updated_at TIMESTAMP
