--- a/src/database/tables/global/db.yaml
+++ b/src/database/tables/global/db.yaml
@@ -7,8 +7,8 @@ depends_on:
 create_stmt: >
   CREATE TABLE IF NOT EXISTS global (
     id SERIAL PRIMARY KEY,
-    created_at TIMESTAMPZ NOT NULL DEFAULT NOW(),
-    updated_at TIMESTAMPZ NOT NULL DEFAULT NOW(),
+    created_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
+    updated_at TIMESTAMPTZ NOT NULL DEFAULT NOW(),
     users__id INTEGER REFERENCES users(id) ON DELETE CASCADE,
     key TEXT NOT NULL UNIQUE,
     val_bool BOOL,
