--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "watch": "npx tsc -w",
     "nodemon": "nodemon .",
     "test-watch": "mocha --recursive --watch",
-    "watch-graphql": "npx postgraphile -c postgres://sidekick_api:hanbikasdfhla45vjwA@localhost:6543/sidekick -s mysider,sidekick --enhance-graphiql --allow-explain --default-role sidekick_public --watch --owner-connection postgres://sidekick_admin:psqlpw123@localhost:6543/sidekick --jwt-token-identifier sidekick.jwt_token --jwt-secret SECRET_FOR_JWT"
+    "watch-graphql": "npx postgraphile -c postgres://sidekick_api:hanbikasdfhla45vjwA@localhost:6543/sidekick -s mysider,sidekick --enhance-graphiql --allow-explain --default-role sidekick_public --watch --owner-connection postgres://sidekick_admin:psqlpw123@localhost:6543/sidekick --jwt-token-identifier sidekick.jwt_token --jwt-secret SECRET_FOR_JWT",
+    "tw-prod": "env NODE_ENV=production npx tailwindcss build public/css/tw-source.css -o public/css/tw-core.css",
+    "tw": "npx tailwindcss build public/css/tw-source.css -o public/css/tw-core.css"
   },
   "repository": {
     "type": "git",
@@ -27,6 +29,7 @@
     "@types/chai": "^4.2.14",
     "@types/koa": "^2.11.6",
     "@types/koa-router": "^7.4.1",
+    "@types/koa-send": "^4.1.2",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.16",
     "@types/pg": "^7.14.7",
@@ -38,12 +41,16 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "autoprefixer": "^10.1.0",
     "dotenv": "^8.2.0",
     "immutable": "^4.0.0-rc.12",
     "koa": "^2.13.0",
     "koa-router": "^10.0.0",
+    "koa-send": "^5.0.1",
     "pg": "^8.5.1",
+    "postcss": "^8.2.2",
     "postgraphile": "^4.10.0",
+    "tailwindcss": "^2.0.2",
     "yaml": "^2.0.0-1"
   }
 }
