--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "typescript": "^4.1.3"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "dotenv": "^8.2.0",
     "immutable": "^4.0.0-rc.12",
