--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "koa-body": "^4.2.0",
     "koa-router": "^10.0.0",
     "koa-send": "^5.0.1",
+    "koa-session2": "^2.2.10",
     "mustache": "^4.1.0",
     "pg": "^8.5.1",
     "postcss": "^8.2.2",
