--- a/package.json
+++ b/package.json
@@ -11,8 +11,8 @@
     "nodemon": "nodemon .",
     "test-watch": "mocha --recursive --watch",
     "watch-graphql": "npx postgraphile -c postgres://sidekick_api:hanbikasdfhla45vjwA@localhost:6543/sidekick -s mysider,sidekick --enhance-graphiql --allow-explain --default-role sidekick_public --watch --owner-connection postgres://sidekick_admin:psqlpw123@localhost:6543/sidekick --jwt-token-identifier sidekick.jwt_token --jwt-secret SECRET_FOR_JWT",
-    "tw-prod": "env NODE_ENV=production npx tailwindcss build public/css/tw-source.css -o public/css/tw-core.css",
-    "tw": "npx tailwindcss build public/css/tw-source.css -o public/css/tw-core.css"
+    "tw-prod": "env NODE_ENV=production npx tailwindcss build resources/public/css/tw-source.css -o resources/public/css/tw-core.css",
+    "tw": "npx tailwindcss build resources/public/css/tw-source.css -o resources/public/css/tw-core.css"
   },
   "repository": {
     "type": "git",
