--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
     "@types/koa-router": "^7.4.1",
     "@types/koa-send": "^4.1.2",
     "@types/mocha": "^8.2.0",
-    "@types/mustache": "^4.1.0",
     "@types/node": "^14.14.16",
     "@types/pg": "^7.14.7",
     "chai": "^4.2.0",
@@ -45,13 +44,13 @@
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
     "dotenv": "^8.2.0",
+    "handlebars": "^4.7.6",
     "immutable": "^4.0.0-rc.12",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-router": "^10.0.0",
     "koa-send": "^5.0.1",
     "koa-session2": "^2.2.10",
-    "mustache": "^4.1.0",
     "pg": "^8.5.1",
     "postcss": "^8.2.2",
     "postgraphile": "^4.10.0",
