--- a/tsconfig.json
+++ b/tsconfig.json
@@ -49,7 +49,8 @@
     "rootDir": ".",
     "typeRoots": [
       "./node_modules/@types",
-      "./node_modules/immutable/dist"
+      "./node_modules/immutable/dist",
+      "./node_modules/handlebars/types"
       ],                       /* List of folders to include type definitions from. */
     // "types": [],                           /* Type declaration files to be included in compilation. */
     // "allowSyntheticDefaultImports": true,  /* Allow default imports from modules with no default export. This does not affect code emit, just typechecking. */
