--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "graphile-worker": "^0.8.1",
     "handlebars": "^4.7.6",
