--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.16",
     "@types/pg": "^7.14.7",
+    "@types/ua-parser-js": "^0.7.35",
     "chai": "^4.2.0",
     "chai-immutable": "^2.1.0",
     "mocha": "^8.2.1",
@@ -46,6 +47,7 @@
     "dotenv": "^8.2.0",
     "graphile-worker": "^0.8.1",
     "handlebars": "^4.7.6",
+    "http-proxy": "^1.18.1",
     "immutable": "^4.0.0-rc.12",
     "isbot": "^3.0.23",
     "koa": "^2.13.0",
