--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/EzzatOmar/sidekickjs#readme",
   "devDependencies": {
     "@types/chai": "^4.2.14",
+    "@types/highlight.js": "^10.1.0",
     "@types/koa": "^2.11.6",
     "@types/koa-router": "^7.4.1",
     "@types/koa-send": "^4.1.2",
@@ -47,6 +48,7 @@
     "dotenv": "^8.2.0",
     "graphile-worker": "^0.8.1",
     "handlebars": "^4.7.6",
+    "highlight.js": "^10.5.0",
     "immutable": "^4.0.0-rc.12",
     "isbot": "^3.0.23",
     "koa": "^2.13.0",
