--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sidekickjs",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "description": "Modern opinionated web backend for rapid prototyping",
   "main": "dist/src/index.js",
   "scripts": {
@@ -53,6 +53,7 @@
     "isbot": "^3.0.23",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
+    "koa-compose": "^4.1.0",
     "koa-router": "^10.0.0",
     "koa-send": "^5.0.1",
     "koa-session2": "^2.2.10",
