--- a/package.json
+++ b/package.json
@@ -27,14 +27,12 @@
   "homepage": "https://github.com/EzzatOmar/sidekickjs#readme",
   "devDependencies": {
     "@types/chai": "^4.2.14",
-    "@types/highlight.js": "^10.1.0",
     "@types/koa": "^2.11.6",
     "@types/koa-router": "^7.4.1",
     "@types/koa-send": "^4.1.2",
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.16",
     "@types/pg": "^7.14.7",
-    "@types/ua-parser-js": "^0.7.35",
     "chai": "^4.2.0",
     "chai-immutable": "^2.1.0",
     "mocha": "^8.2.1",
@@ -44,13 +42,10 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
-    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "graphile-worker": "^0.8.1",
     "handlebars": "^4.7.6",
-    "highlight.js": "^10.5.0",
     "immutable": "^4.0.0-rc.12",
-    "isbot": "^3.0.23",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-compose": "^4.1.0",
@@ -61,8 +56,6 @@
     "postcss": "^8.2.2",
     "postgraphile": "^4.10.0",
     "rate-limiter-flexible": "^2.2.1",
-    "tailwindcss": "^2.0.2",
-    "ua-parser-js": "^0.7.23",
-    "yaml": "^2.0.0-1"
+    "tailwindcss": "^2.0.2"
   }
 }
