--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sidekickjs",
   "version": "0.1.0",
   "description": "Modern opinionated web backend for rapid prototyping",
-  "main": "dist/src/index.js",
+  "main": "dist/index.js",
   "scripts": {
     "test": "echo `Error: $(grep NODE_ENV .env | cut -d '=' -f2) no test specified` && exit 1",
     "test2": "(grep PGUSER_API_PW .env | cut -d '=' -f2 )",
@@ -33,6 +33,7 @@
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.16",
     "@types/pg": "^7.14.7",
+    "@types/ua-parser-js": "^0.7.35",
     "chai": "^4.2.0",
     "chai-immutable": "^2.1.0",
     "mocha": "^8.2.1",
@@ -42,10 +43,13 @@
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
     "autoprefixer": "^10.1.0",
+    "axios": "^0.21.1",
     "dotenv": "^8.2.0",
     "graphile-worker": "^0.8.1",
     "handlebars": "^4.7.6",
+    "highlight.js": "^10.5.0",
     "immutable": "^4.0.0-rc.12",
+    "isbot": "^3.0.23",
     "koa": "^2.13.0",
     "koa-body": "^4.2.0",
     "koa-compose": "^4.1.0",
@@ -56,6 +60,7 @@
     "postcss": "^8.2.2",
     "postgraphile": "^4.10.0",
     "rate-limiter-flexible": "^2.2.1",
-    "tailwindcss": "^2.0.2"
+    "tailwindcss": "^2.0.2",
+    "ua-parser-js": "^0.7.23"
   }
 }
