--- a/tsconfig.json
+++ b/tsconfig.json
@@ -46,7 +46,7 @@
     // "baseUrl": "./",                       /* Base directory to resolve non-absolute module names. */
     // "paths": {"./*": ["./*", "./custom/node_modules/*"]},                           /* A series of entries which re-map imports to lookup locations relative to the 'baseUrl'. */
     // "rootDirs": [],                        /* List of root folders whose combined content represents the structure of the project at runtime. */
-    "rootDir": ".",
+    "rootDir": "./src",
     "typeRoots": [
       "./node_modules/@types",
       "./node_modules/immutable/dist",
