--- a/package.json
+++ b/package.json
@@ -47,7 +47,6 @@
     "dotenv": "^8.2.0",
     "graphile-worker": "^0.8.1",
     "handlebars": "^4.7.6",
-    "highlight.js": "^10.5.0",
     "immutable": "^4.0.0-rc.12",
     "isbot": "^3.0.23",
     "koa": "^2.13.0",
@@ -60,7 +59,6 @@
     "postcss": "^8.2.2",
     "postgraphile": "^4.10.0",
     "rate-limiter-flexible": "^2.2.1",
-    "tailwindcss": "^2.0.2",
-    "ua-parser-js": "^0.7.23"
+    "tailwindcss": "^2.0.2"
   }
 }
