--- a/_.env
+++ b/_.env
@@ -4,11 +4,11 @@ DOMAIN=localhost
 WEB_PORT=3000
 
 # POSTGRES DATA -> NEEDS TO CORRESPOND WITH VALUES IN docker-compose.yml
-PGHOST=localhost
+PGHOST=postgres
 PGUSER=sidekick_admin
 PGDATABASE=sidekick
 PGPASSWORD=psqlpw123
-PGPORT=6543
+PGPORT=5432
 
 PGUSER_API_PW=todoChangeMe
 JWT_SECRET=SECRET_FOR_JWT
