update graphile worker to 0.9

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test2": "(grep PGUSER_API_PW .env | cut -d '=' -f2 )",
     "compile": "npx tsc",
     "watch": "npx tsc -w",
-    "nodemon": "npx nodemon .",
+    "nodemon": "npx nodemon . -e html,js --delay 200ms",
     "test-watch": "mocha --recursive --watch",
     "watch-graphql": "npx postgraphile -c postgres://sidekick_api:todoChangeMe@localhost:6543/sidekick -s mysider,sidekick --enhance-graphiql --allow-explain --default-role sidekick_public --watch --owner-connection postgres://sidekick_admin:psqlpw123@localhost:6543/sidekick --jwt-token-identifier sidekick.jwt_token --jwt-secret SECRET_FOR_JWT",
     "tw-prod": "env NODE_ENV=production npx tailwindcss build resources/private/css/tw-source.css -o resources/private/css/tw-core.css",
@@ -45,7 +45,7 @@
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
-    "graphile-worker": "^0.8.1",
+    "graphile-worker": "^0.9.0",
     "handlebars": "^4.7.6",
     "immutable": "^4.0.0-rc.12",
     "koa": "^2.13.0",
