--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   web:
-    image: node:alpine3.12
+    image: node
     restart: unless-stopped
     logging:
       driver: json-file
@@ -37,21 +37,21 @@ services:
       - ./docker/docker-entrypoint-initdb.d:/docker-entrypoint-initdb.d
     networks: 
       - sidekick
-  rest:
-    image: postgrest/postgrest
-    ports:
-      - "3100:3000"
-    environment:
-      PGRST_DB_URI: postgres://sidekick_api:todoChangeMe@postgres:5432/sidekick
-      PGRST_DB_SCHEMA: simple_ab
-      PGRST_DB_ANON_ROLE: sidekick_public #In production this role should not be the same as the one used for the connection
-      PGRST_SERVER_PROXY_URI: "http://127.0.0.1:3100"
-      PGRST_JWT_SECRET: "SECRET_FOR_JWTSECRET_FOR_JWTSECRET_FOR_JWT"
-      PGRST_JWT_AUD: "postgraphile"
-    depends_on:
-      - postgres
-    networks: 
-      - sidekick
+ #rest:
+ #  image: postgrest/postgrest
+ #  ports:
+ #    - "3100:3000"
+ #  environment:
+ #    PGRST_DB_URI: postgres://sidekick_api:todoChangeMe@postgres:5432/sidekick
+ #    PGRST_DB_SCHEMA: simple_ab
+ #    PGRST_DB_ANON_ROLE: sidekick_public #In production this role should not be the same as the one used for the connection
+ #    PGRST_SERVER_PROXY_URI: "http://127.0.0.1:3100"
+ #    PGRST_JWT_SECRET: "SECRET_FOR_JWTSECRET_FOR_JWTSECRET_FOR_JWT"
+ #    PGRST_JWT_AUD: "postgraphile"
+ #  depends_on:
+ #    - postgres
+ #  networks: 
+ #    - sidekick
 
 networks:
   sidekick:
