--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Modern opinionated web backend for rapid prototyping",
   "main": "dist/index.js",
   "scripts": {
-    "test": "echo `Error: $(grep NODE_ENV .env | cut -d '=' -f2) no test specified` && exit 1",
+    "test": "npx nodemon dist/test/test.js -e js --delay 300ms --watch dist/test ",
     "test2": "(grep PGUSER_API_PW .env | cut -d '=' -f2 )",
     "compile": "npx tsc",
     "watch": "npx tsc -w",
@@ -33,10 +33,11 @@
     "@types/mocha": "^8.2.0",
     "@types/node": "^14.14.16",
     "@types/pg": "^7.14.7",
+    "@types/rewire": "^2.5.28",
     "@types/ua-parser-js": "^0.7.35",
     "chai": "^4.2.0",
     "chai-immutable": "^2.1.0",
-    "mocha": "^8.2.1",
+    "rewire": "^5.0.0",
     "ts-node": "^9.1.1",
     "typescript": "^4.1.3"
   },
