--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.2.1",
+    "@types/koa-websocket": "^5.0.5",
     "autoprefixer": "^10.1.0",
     "axios": "^0.21.1",
     "dotenv": "^8.2.0",
@@ -55,6 +56,7 @@
     "koa-router": "^10.0.0",
     "koa-send": "^5.0.1",
     "koa-session2": "^2.2.10",
+    "koa-websocket": "^6.0.0",
     "pg": "^8.5.1",
     "pg-native": "^3.0.0",
     "postcss": "^8.2.2",
